<resources>
    <string name="app_name">OneHack</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_invalid_password">Please enter a valid password</string>
    <string name="logging_in">Logging in...</string>
    <string name="error_log_in">Log in failed. Please try again.</string>
    <string name="api_account_type">com.arbrr.onehack.api</string>
    <string name="title_activity_main">OneHack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Announcements Strings-->
    <string name="announcements_title">Announcements</string>
    <string name="new_announcement_title">New Announcement</string>
    <string name="title_text">Title</string>
    <string name="body_text">Body</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="delete_text">Delete</string>
    <string name="announcement_add_image">Add Image</string>
    <string name="announcement_take_photo">Take Photo</string>
    <string name="announcement_choose_photo">Choose Photo</string>
    <string name="new_announcement_dialog_title">Select Method</string>

    <!-- DIALOG STUFF -->
    <string name="confirmation_dialog">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>


    <string name="new_announcement_failure">Couldn\'t create announcement!</string>
    <string name="delete_announcement_failure">Couldn\'t delete the announcement!</string>

    <!-- Contacts Strings -->
    <string name="contacts_search_title">Search for Contacts</string>

    <!--Welcome Screen Strings-->
    <string name="login_no_account_message">Don\'t have an account set up?</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_company_name">Company (Optional)</string>
    <string name="signup">Sign Up</string>
    <string name="login_invalid_cred">Invalid Username and Password Combination</string>


<!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmation_dialog_info">This action CANNOT be undone. The selected event will be
        deleted forever.
    </string>

    <!-- NAVIGATION DRAWER TITLES -->
    <string-array name="nav_titles">
        <item>Announcements</item>
        <item>Events</item>
        <item>Contacts</item>
        <item>Awards</item>
    </string-array>

</resources>
